--- a/TestUI/Window1.xaml
+++ b/TestUI/Window1.xaml
@@ -2,6 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:l="clr-namespace:UIControls;assembly=SearchTextBox"
+        WindowStartupLocation="CenterScreen"
         Title="Window1" Height="423" Width="487">
     <Grid>
         <l:SearchTextBox Height="39" Margin="118,52,116,0" VerticalAlignment="Top" Name="m_txtTest" Background="AliceBlue" />
